monitoring/charts/grafana/ingress.yaml
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: grafana
  namespace: monitoring
  annotations:
    #kubernetes.io/ingress.class: "system-ingress"
    #kubernetes.io/ingress.class: "nginx"
    certmanager.k8s.io/cluster-issuer: monitoring-issuer
spec:
  ingressClassName: nginx
  rules:
    - host: "grafana.cluster.local"
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: grafana
                port:
                  number: 80
